# zeroaid

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.zed/: settings.json
assets/settings/: default.json
crates/acp_thread/src/: acp_thread.rs
crates/agent/src/: agent.rs
crates/agent/src/tests/: mod.rs
crates/agent_settings/src/: agent_settings.rs
crates/agent_ui/src/: mention_set.rs
crates/assistant_text_thread/src/: text_thread.rs
crates/audio/: Cargo.toml
crates/audio/src/: audio.rs
crates/auto_update/src/: auto_update.rs
crates/buffer_diff/src/: buffer_diff.rs
crates/client/src/: client.rs  user.rs
crates/cloud_api_types/src/: cloud_api_types.rs
crates/collab/tests/integration/: integration_tests.rs
crates/collab_ui/src/: collab_panel.rs  collab_ui.rs
crates/context_server/src/: client.rs  listener.rs
crates/context_server/src/transport/: http.rs  stdio_transport.rs
crates/credentials_provider/src/: credentials_provider.rs
crates/diagnostics/src/: diagnostic_renderer.rs
crates/edit_prediction/src/: edit_prediction.rs  edit_prediction_tests.rs
crates/edit_prediction_cli/src/: main.rs
crates/edit_prediction_context/src/: edit_prediction_context.rs  edit_prediction_context_tests.rs
crates/editor/src/: actions.rs  bracket_colorization.rs  display_map.rs  editor.rs  editor_settings.rs  editor_tests.rs  element.rs  persistence.rs  scroll.rs  selections_collection.rs
crates/editor/src/display_map/: block_map.rs  invisibles.rs
crates/extension_host/src/: extension_settings.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: git_panel.rs  project_diff.rs
crates/gpui/: Cargo.toml
crates/gpui_macos/: build.rs
crates/language/src/: buffer_tests.rs  language_settings.rs
crates/language_model/src/: registry.rs  telemetry.rs
crates/language_tools/: Cargo.toml
crates/language_tools/src/: lsp_log_view.rs
crates/livekit_api/src/: livekit_api.rs
crates/livekit_client/: Cargo.toml
crates/markdown_preview/src/: markdown_preview_view.rs
crates/multi_buffer/src/: multi_buffer_tests.rs
crates/project/src/: buffer_store.rs  git_store.rs
crates/project/tests/integration/: project_tests.rs
crates/remote_server/src/: remote_editing_tests.rs
crates/repl/src/: repl_editor.rs  repl_sessions_ui.rs
crates/settings/src/: settings_store.rs  vscode_import.rs
crates/settings_content/src/: editor.rs  extension.rs  language.rs  settings_content.rs
crates/settings_ui/: Cargo.toml
crates/settings_ui/src/: page_data.rs  pages.rs  settings_ui.rs
crates/settings_ui/src/pages/: tool_permissions_setup.rs
crates/sidebar/: Cargo.toml
crates/sidebar/src/: ai_sidebar.rs  no_ai_sidebar.rs  sidebar.rs
crates/theme/src/: fallback_themes.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: onboarding_banner.rs  title_bar.rs
crates/vim/src/: state.rs
crates/web_search_providers/src/: web_search_providers.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: multi_workspace.rs  pane_group.rs  workspace.rs  workspace_settings.rs
crates/zed/: Cargo.toml  build.rs
crates/zed/src/: main.rs  visual_test_runner.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  open_listener.rs  quick_action_bar.rs  visual_tests.rs
docs/src/ai/: external-agents.md
docs/src/migrate/: vs-code.md
script/: bundle-linux  bundle-mac  bundle-windows.ps1  debug-cli  generate-licenses
