[package]
name = "sidebar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/sidebar.rs"

[features]
default = []
ai = [
    "dep:acp_thread",
    "dep:agent",
    "dep:agent-client-protocol",
    "dep:agent_ui",
]
test-support = ["ai"]

[dependencies]
acp_thread = { workspace = true, optional = true }
agent = { workspace = true, optional = true }
agent-client-protocol = { workspace = true, optional = true }
agent_ui = { workspace = true, optional = true }
chrono.workspace = true
editor.workspace = true
feature_flags.workspace = true
fs.workspace = true
gpui.workspace = true
menu.workspace = true
project.workspace = true
recent_projects.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
acp_thread = { workspace = true, features = ["test-support"] }
agent = { workspace = true, features = ["test-support"] }
agent_ui = { workspace = true, features = ["test-support"] }
assistant_text_thread = { workspace = true, features = ["test-support"] }
editor.workspace = true
language_model = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
feature_flags.workspace = true
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
recent_projects = { workspace = true, features = ["test-support"] }
