[package]
name = "sidebar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/sidebar.rs"

[features]
default = []
ai = [
    "dep:acp_thread",
    "dep:action_log",
    "dep:agent",
    "dep:agent-client-protocol",
    "dep:agent_ui",
    "dep:anyhow",
    "dep:chrono",
    "dep:editor",
    "dep:feature_flags",
    "dep:fs",
    "dep:git",
    "dep:menu",
    "dep:project",
    "dep:recent_projects",
    "dep:settings",
    "dep:theme",
    "dep:ui",
    "dep:util",
    "dep:vim_mode_setting",
    "dep:zed_actions",
]
test-support = ["ai"]

[dependencies]
acp_thread = { workspace = true, optional = true }
action_log = { workspace = true, optional = true }
agent = { workspace = true, optional = true }
agent-client-protocol = { workspace = true, optional = true }
agent_ui = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
editor = { workspace = true, optional = true }
feature_flags = { workspace = true, optional = true }
fs = { workspace = true, optional = true }
git = { workspace = true, optional = true }
gpui.workspace = true
menu = { workspace = true, optional = true }
project = { workspace = true, optional = true }
recent_projects = { workspace = true, optional = true }
settings = { workspace = true, optional = true }
theme = { workspace = true, optional = true }
ui = { workspace = true, optional = true }
util = { workspace = true, optional = true }
vim_mode_setting = { workspace = true, optional = true }
workspace.workspace = true
zed_actions = { workspace = true, optional = true }

[dev-dependencies]
acp_thread = { workspace = true, features = ["test-support"] }
agent = { workspace = true, features = ["test-support"] }
agent_ui = { workspace = true, features = ["test-support"] }
assistant_text_thread = { workspace = true, features = ["test-support"] }
editor.workspace = true
language_model = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
prompt_store.workspace = true
recent_projects = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
feature_flags.workspace = true
fs = { workspace = true, features = ["test-support"] }
git.workspace = true
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
